Added more middlewares
